syntax = "proto3";

package signup;

message SignupRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  int32 gender = 5;
  int32 locale = 6;
}

service SignupService {
  rpc CreateUser (SignupRequest) returns (SignupResponse);
}

message SignupResponse {
  string id = 1;
}